@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.1422 2003/02/17 14:45:18 zuntum Exp $
+$NetBSD: CHANGES,v 1.1423 2003/02/17 14:56:45 agc Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -726,3 +726,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated xchat2 to 2.0.0nb1 [jmmv 2003-02-17]
         Updated galeon to 1.2.8 [taya 2003-02-17]
 	Added pxtools-0.0.19 [zuntum 2003-02-17]
+        Updated sqlite to 2.8.0 [agc 2003-02-17]
